# Jupiter

.github/workflows/: deploy.yml
agent/: CLAUDE.md  pyproject.toml
agent/.github/workflows/: test.yml
agent/luminque/onboarding/: __init__.py  enrollment.py
agent/luminque/sender/: __init__.py  __version__.py  constants.py  credentials.py  db.py  models.py  retention.py  sender.py  state.py  transport.py
agent/luminque/stop/: __init__.py
agent/scripts/: vm_load_test.ps1
agent/tests/: test_capturev2.py  test_legacy_db_compat.py  test_onboarding.py  test_sender.py  test_sender_contract.py  test_sender_integration.py
design-docs/: luminque-infra-p1.md  luminque-ingestion-p1.md
ingestion/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ingestion/luminque_ingestion/: app.py  auth.py  cli.py  config.py  db.py  migrations.py  models.py  storage.py
ingestion/luminque_ingestion/alembic/: env.py
ingestion/luminque_ingestion/alembic/versions/: 0001_initial.py
ingestion/tests/: conftest.py  test_contract.py  test_unit.py
luminque-ops.nosync/: .gitignore  README.md  luminque.spec
luminque-ops.nosync/luminque/: main.py
luminque-ops.nosync/luminque/sender/: db.py  (+4 more)
luminque-ops.nosync/tests/: test_onboarding.py  test_sender_contract.py  test_watchdog.py
luminque-ops/luminque/: __init__.py
luminque-ops/tests/: test_legacy_db_compat.py  test_sender.py
terraform/: .gitignore  README.md  alb.tf  ecr.tf  ecs.tf  eventbridge.tf  github-oidc.tf  iam.tf  main.tf  network.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  variables.tf  versions.tf
terraform/scripts/: bootstrap-state.sh
(+14 files in other folders)
