[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luminque-ingestion"
version = "0.1.0"
description = "Luminque ingestion service — receives agent screenshots over HTTP, writes PNGs to S3 and metadata to Postgres"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
]

[project.scripts]
luminque-create-tenant = "luminque_ingestion.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["luminque_ingestion"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
